# whatsapp-collection

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  alembic.ini  pyproject.toml  railway.json
.github/workflows/: evaluate-deployed.yml  smoke-test-deployed.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: celery_app.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py
app/routers/: __init__.py  ai.py  cases.py  customers.py  dashboard.py  drive.py  imports.py  summary.py  webhooks.py
app/services/: __init__.py  ai.py  briefing.py  collections.py  drive.py  ingestion.py  security.py  uploads.py  verification.py
app/static/: app.css
app/templates/: index.html
docs/: railway-setup.md  tally-receivables-source.md
sample_data/: NA_Sample_outstanding report xl.xlsx  tally_bills_receivable_sample.csv
scripts/: eval_deployed.py  smoke_test_deployed.py
tests/: conftest.py  test_briefing.py  test_collections.py  test_ingestion.py  test_verification.py
