[project]
name = "receivables-copilot"
version = "0.1.0"
description = "WhatsApp-first receivables copilot MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "celery>=5.4.0",
  "cryptography>=44.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.4",
  "openai>=1.60.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.6"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
